Fix narrow desktop logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -205,11 +205,13 @@ ul {
 }
 
 #logos {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 #logos img {
     height: 32px;
+    margin-bottom: 20px;
     padding: 0 20px;
 }
 
